--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" type="image/x-icon" href="./src/assets/plane.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Paulo Eduardo Souza de Melos" />
     <meta name="description" content="ATAM Airlines Website with sections Home, About, Contact and Legal" />
